--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/olahakos/olah-nagy#readme",
   "dependencies": {
+    "ejs": "^2.5.9",
     "express": "^4.16.3"
   }
 }
